--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,14 +5,49 @@
     verde:#49a09d
     lilas: #5f2c82
 */
-
-body {
-    background-color: rgb(217, 95, 217);
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
 }
 
+body,
+html {
+    background-color: #5f2c82;
+    width: 100vw;
+    height: 100vh;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+
 section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
     background-color: white;
-    width: 50vw;
-    height: 50vh;
-    
+    height: 500px;
+    width: 250px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.532);
+}
+
+section#login>div#imagem {
+    display: block;
+    background: #5f2c82 url(../imagens/telalogin.jpg) no-repeat;
+    background-size: cover;
+    height: 200px;
+}
+
+section#login>id#fomulario {
+    padding: 10px;
+    display: block;
 }
