--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,6 +38,10 @@ section#login {
     width: 250px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.532);
+
+    transition: width .3, height .3s;
+    transition-timing-function: ease;
+
 }
 
 section#login>div#imagem {
@@ -47,7 +51,7 @@ section#login>div#imagem {
     height: 200px;
 }
 
-section#login>id#fomulario {
+section#login>div#fomulario {
     padding: 10px;
     display: block;
 }
