--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -23,6 +23,13 @@ Tablet: 768px até 992px
         float: right;
         width: 70%;
     }
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario>p {
+        font-size: 1.2em;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -37,14 +44,21 @@ Tablet: 768px até 992px
     }
 
     section#login>div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login>div#formulario {
-        float: right;
+        float: left;
         width: 50%;
     }
-}
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario>p {
+        font-size: 1.2em;
+    }
 }
