--- a/estilos/style.css
+++ b/estilos/style.css
@@ -55,3 +55,17 @@ section#login>div#fomulario {
     padding: 10px;
     display: block;
 }
+
+div#formulario>h1 {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
+}
+
+div.campo {
+    margin-top: 20px;
+}
