--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,15 +30,16 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+
     overflow: hidden;
 
     background-color: white;
-    height: 500px;
+    height: 515px;
     width: 250px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.532);
 
+    transform: translate(-50%, -50%);
     transition: width .3, height .3s;
     transition-timing-function: ease;
 
@@ -62,10 +63,90 @@ div#formulario>h1 {
     margin-bottom: 10px;
 }
 
-div#formulario > p {
+form>div.campo {
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+div.campo>label {
+    display: none;
+}
+
+div.campo>span {
+    color: white;
+
+
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo>input {
+    background-color: #49a09d;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-10px);
+
+}
+
+div.campo>input:focus-within {
+    background-color: white;
+    border: none;
+}
+
+div#formulario>p {
     font-size: 0.8em;
+    margin: 10px;
 }
 
 div.campo {
     margin-top: 20px;
+}
+
+form>input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form>input[type=submit]:hover {
+    background-color: #2d6462;
+
+}
+
+form>a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2d6462;
+    border: 1px solid #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+}
+
+form>a.botao:hover {
+    background-color: #6cd3cf;
+}
+
+form>a.botao>span {
+    font-size: 0.8em;
 }
