--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,14 +30,15 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-
     overflow: hidden;
 
     background-color: white;
-    height: 515px;
     width: 250px;
+    height: 515px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.532);
+    box-shadow: 0px 0px 10px rgba(0,0, 0.450);
+
+    
 
     transform: translate(-50%, -50%);
     transition: width .3, height .3s;
